# Bert-TensorRT

./: README.md  builder.py  calibrator.py  model_to_onnx.py  onnx_to_trt.py  trt_helper.py
LayerNormPlugin/: CMakeLists.txt  LayerNormPlugin.cu  LayerNormPlugin.h  testLayerNormPlugin.py
bert_pretrain_pytorch/: case_data.npz
onnx-surgeon/: encoder-surgeon.py  onnx2trt.py
